Remove illegal access warnings for Tomcat
Add jvm arguments specified by Tomcat for getting around illegal access
warnings.
https://github.com/apache/tomcat/blob/7.0.x/bin/catalina.sh#L322