@@ -337,6 +337,16 @@ tasks.register("run", JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
         
     main = project.mainClassName
+    
+    jvmArgs = [
+        // Add the JAVA 9 specific start-up parameters required by Tomcat
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.io=ALL-UNNAMED",
+        "--add-opens=java.base/java.util=ALL-UNNAMED",
+        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+        "--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"
+    ]
+    
 }
 
 
@@ -509,7 +519,16 @@ createExe {
     
     // for debugging classpath information        
     //headerType = "console"
-    //jvmOptions = ["-Dlog4j2.debug=true"]
+    jvmOptions = [
+    //"-Dlog4j2.debug=true",
+    
+    // Add the JAVA 9 specific start-up parameters required by Tomcat
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+    "--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED"
+    ]
 }
 distributionDependencies.dependsOn(createExe)
 
